--- a/Bai4.html
+++ b/Bai4.html
@@ -6,26 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trang web cá nhân</title>
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="bai4.css">
 </head>
 <body>
-    <style>
-        #wrapper{
-            max-width: 1000px;
-            margin: auto;
-            font-size: 25px;
-        }
-    .image-with-text {
-      display: flex;
-      align-items: center;
-    }
-
-    .image-with-text img {
-      margin-right: 10px;
-    }
-    h2{
-      font-size: 40px;
-
-    </style>
         <!-- Header -->
         <header class="w3-container w3-teal">
         <h1 style="text-align: center; font-size: 50px;">Trang web cá nhân</h1>
