--- a/webbtap.html
+++ b/webbtap.html
@@ -40,13 +40,11 @@
           <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Buổi 3</a>
             <div class="dropdown-content">
-              <a href="">Bài 1</a>
-              <a href="">Bài 2.1</a>
-              <a href="">Bài 2.2</a>
-              <a href="">Bài 2.3</a>
-              <a href="">Bài 3</a>
-              <a href="">Bài 4</a>
-              <a href="">Yêu cầu 1</a>
+              <a href="../B3/YeucauB3.html">Yêu cầu 1</a>
+              <a href="../B3/Baitaptrenlop.html">Bài tập trên lớp</a>
+              <a href="../B3/B3bai1.html">Bài 1</a>
+              <a href="../B3/b3bai2.html">Bài 2</a>
+              <a href="../B1/Bai4.html">Bài 3</a>
             </div>
           </li>
           <li class="dropdown">
