--- a/webbtap.html
+++ b/webbtap.html
@@ -10,7 +10,7 @@
 <body>
     <header class="tieude">
     <h1>Phạm Thị Thanh Hằng</h1>
-        <h1 style="text-align: center; font-size: 150px;">Bài tập thiết kế Web</h1>
+        <h1 class="item">Bài tập thiết kế Web</h1>
     </header>
 
     <ul>
