--- a/bai30%.html
+++ b/bai30%.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -120,20 +121,14 @@
             </div>
         </div>
         <div class="part4">
-            <div class="anh2">
-                    <img src="../static/la8.png" alt="" >
-            </div>
             <div class="wrapper part1-wi">
                 <h2>Lorem ipsum dolor sit, amet conse</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, enim explicabo possimus cumque ullam nam! Quis, nulla tenetur. Nulla praesentium optio exercitationem illum nobis ipsa tenetur at cumque cum error!</p>
                 <hr>
             </div> 
-            <div class="anh1">
-                <img src="../static/pizza.png" alt="">
-            </div>
-            <div class="piece">
-                <img src="../static/piece.png" alt="">
-            </div>  
+             <div class="anh">
+                    <img src="../static/anh.png" alt="" >
+            </div> 
         </div>
         <div class="wrapper part5 food">
             <div class="part1-item">
