--- a/webbtap.html
+++ b/webbtap.html
@@ -22,7 +22,7 @@
             <a href="Bai2.2.html">Bài 2.2</a>
             <a href="Bai2.3.html">Bài 2.3</a>
             <a href="Bai3.html">Bài 3</a>
-            <a href="Bai4.html">Bài 4</a>
+            <a href="../B4/porfolio.html">Bài 4</a>
             <a href="hello.html">Yêu cầu 1</a>
           </div>
         </li>
@@ -34,7 +34,7 @@
               <a href="b2bai2.2.html">Bài 2.2</a>
               <a href="b2bai3.html">Bài 3</a>
               <a href="b2bai4.html">Bài 4.1</a>
-              <a href="Bai4.html">Bài 4.2</a>
+              <a href="../B4/porfolio.html">Bài 4.2</a>
             </div>
           </li>
           <li class="dropdown">
@@ -44,19 +44,17 @@
               <a href="../B3/Baitaptrenlop.html">Bài tập trên lớp</a>
               <a href="../B3/B3bai1.html">Bài 1</a>
               <a href="../B3/b3bai2.html">Bài 2</a>
-              <a href="../B1/Bai4.html">Bài 3</a>
+              <a href="../B4/porfolio.html">Bài 3</a>
             </div>
           </li>
           <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Buổi 4</a>
             <div class="dropdown-content">
-              <a href="">Bài 1</a>
-              <a href="">Bài 2.1</a>
-              <a href="">Bài 2.2</a>
-              <a href="">Bài 2.3</a>
-              <a href="">Bài 3</a>
-              <a href="">Bài 4</a>
-              <a href="">Yêu cầu 1</a>
+              <a href="../B4/B4bai1.html">Bài 1</a>
+              <a href="../B4/B4bai2.html">Bài 2</a>
+              <a href="../B4/B4bai3.html">Bài 3</a>
+              <a href="../B4/B4bai4.html">Bài 4</a>
+              <a href="../B4/porfolio.html">Trang Web cá nhân</a>
             </div>
           </li>
           <li class="dropdown">
