--- a/Web Ca Nhan/porfolio.html
+++ b/Web Ca Nhan/porfolio.html
@@ -70,6 +70,11 @@
                                     <div class="menu">
                                         <a href="#buoi5"><span>Buổi 5</span></a>
                                         <div class="right">
+                                            <a href="../B5/B5Bai1.html"><span>Bài 1a</span></a>
+                                            <a href="../B5/B5bai1b.html"><span>Bài 1b</span></a>
+                                            <a href="../B5/B5Bai2.html"><span>Bài 2</span></a>
+                                            <a href="../B5/B5bai3a.html"><span>Bài 3a</span></a>
+                                            <a href="../B5/B5Bai3b.html"><span>Bài 3b</span></a>
                                         </div>
                                     </div>
                                     <div class="menu">
@@ -231,7 +236,13 @@
                 </div>
                 <div class="col-14 order-9">
                     <section id="buoi5"><div class="text"><h3>Buổi 5</h3></div></section>
-                    <div class="list"></div>
+                    <div class="list">
+                        <a href="../B5/B5Bai1.html"><span>Bài 1a</span></a>
+                        <a href="../B5/B5bai1b.html"><span>Bài 1b</span></a>
+                        <a href="../B5/B5Bai2.html"><span>Bài 2</span></a>
+                        <a href="../B5/B5bai3a.html"><span>Bài 3a</span></a>
+                        <a href="../B5/B5Bai3b.html"><span>Bài 3b</span></a>
+                    </div>
                 </div>
                 <div class="col-14 order-10">
                     <div class="img-buoi"><img src="https://images.pexels.com/photos/2085998/pexels-photo-2085998.jpeg?auto=compress&cs=tinysrgb&w=600" alt=""></div>
