--- a/webbtap.html
+++ b/webbtap.html
@@ -60,13 +60,11 @@
           <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn">Buổi 5</a>
             <div class="dropdown-content">
-              <a href="">Bài 1</a>
-              <a href="">Bài 2.1</a>
-              <a href="">Bài 2.2</a>
-              <a href="">Bài 2.3</a>
-              <a href="">Bài 3</a>
-              <a href="">Bài 4</a>
-              <a href="">Yêu cầu 1</a>
+              <a href="../B5/B5Bai1.html">Bài 1a</a>
+              <a href="../B5/B5bai1b.html">Bài 1b</a>
+              <a href="../B5/B5Bai2.html">Bài 2</a>
+              <a href="../B5/B5bai3a.html">Bài 3a</a>
+              <a href="../B5/B5Bai3b.html">Bài 3b</a>
             </div>
           </li>
             <li class="dropdown">
