--- a/Web Ca Nhan/porfolio.html
+++ b/Web Ca Nhan/porfolio.html
@@ -80,6 +80,11 @@
                                     <div class="menu">
                                         <a href="#buoi6"><span>Buổi 6</span></a>
                                         <div class="right">
+                                            <a href="../B6/B6bai1.html"><span> Bài 1</span></a>
+                                            <a href="../B6/B6bai2.html"><span> Bài 2</span></a>
+                                            <a href="../B6/B6bai3.html"><span> Bài 3a</span></a>
+                                            <a href="../B6/B6bai3b.html"><span> Bài 3b</span></a>
+                                            <a href="../B6/Yeucau1.html"><span>Yêu cầu 1</span></a>
                                         </div>
                                     </div>
                                     <div class="menu">
@@ -252,7 +257,13 @@
                 </div>
                 <div class="col-14 order-12">
                     <section id="buoi6"><div class="text"><h3>Buổi 6</h3></div></section>
-                    <div class="list"></div>
+                    <div class="list">
+                        <a href="../B6/B6bai1.html"><span> Bài 1</span></a>
+                        <a href="../B6/B6bai2.html"><span> Bài 2</span></a>
+                        <a href="../B6/B6bai3.html"><span> Bài 3a</span></a>
+                        <a href="../B6/B6bai3b.html"><span> Bài 3b</span></a>
+                        <a href="../B6/Yeucau1.html"><span>Yêu cầu 1</span></a>
+                    </div>
                 </div>
                 <div class="col-14 order-13">
                     <section id="buoi7"><div class="text"><h3>Buổi 7</h3></div></section>
